# MathVier

./: CMakeLists.txt  Diary.md  compilation_shortcut.sh
falatorio/: fala_matrizes.cpp
include/MathVier/: Math.hpp  MathVier.hpp  Quartenion.hpp  VectorGeneric.hpp  array.hpp  matrix.hpp  vector.hpp
src/: main.cpp  matrix.cpp  vector.cpp
tests/: test_vec.cpp
